# Desktop-pets

./: .gitattributes  .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.bk  DeskPet.sln  README.md  TuoPan.qrc  readme.md  src目录下部分代码功能列表.md  任务计划书.md  开发流程.md  桌面宠物需求文档.md  目录说明.md
.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
Assets/: Assets.expressionList.asset  Assets.fadeMotionList.asset
Assets/6.6全/: P.exp3.asset  Q.exp3.asset  Scene1.motion3.anim  下.exp3.asset  困困 Scene1.anim  晕.exp3.asset  桌宠.cdi3.json  桌宠.controller  桌宠.prefab  生气.exp3.asset
Assets/Editor/: AssetBundleBuilder.cs
Assets/Free 2D Adventure Beach Pack/Example/: Example.unity
Assets/Live2D/Cubism/Samples/Models/Mao/: Mao.fadeMotionList.asset
Assets/Live2D/Cubism/Samples/Models/Mao/motions/: mtn_01.anim  mtn_02.anim  mtn_03.anim  mtn_04.anim  special_01.anim  special_02.anim
Assets/Live2D/Cubism/Samples/Models/Natori/: Natori.fadeMotionList.asset
Assets/Live2D/Cubism/Samples/Models/Natori/motions/: mtn_00.anim  mtn_01.anim  mtn_02.anim  mtn_03.anim  mtn_04.anim  mtn_05.anim  mtn_06.anim  mtn_07.anim  mtn_08.anim
Assets/Resources/: Resources.expressionList.asset  Resources.fadeMotionList.asset
Assets/Resources/6.6全/: 0.exp3.asset  5.exp3.asset  6.exp3.asset  7.exp3.asset  8.exp3.asset  B.exp3.asset  CTRL.exp3.asset  E.exp3.asset  ESC.exp3.asset  F.exp3.asset  G.exp3.asset  H.exp3.asset  I.exp3.asset  J.exp3.asset  L.exp3.asset  M.exp3.asset  O.exp3.asset  R.exp3.asset  S.exp3.asset  Scene1.motion3.anim  Scene1.motion3.fade.asset  TAB.exp3.asset  X.exp3.asset  Z.exp3.asset  items_pinned_to_model.json  上.exp3.asset  右.exp3.asset  呆.exp3.asset  困困 Scene1.anim  困困 Scene1.fade.asset  幽灵.exp3.asset  木鱼.exp3.asset  桌宠.asset  桌宠.controller  桌宠.moc3  桌宠.prefab  爱心眼.exp3.asset  黑眼圈.exp3.asset  鼠标.exp3.asset  鼠标左.exp3.asset
Assets/Resources/mine/: 3.exp3.asset  A.exp3.asset  K.exp3.asset  N.exp3.asset  SHIFT.exp3.asset  Scene1.motion3.anim  Scene1.motion3.fade.asset  T.exp3.asset  U.exp3.asset  V.exp3.asset  W.exp3.asset  Y.exp3.asset  困困 Scene1.anim  困困 Scene1.fade.asset  桌宠.asset  桌宠.controller  桌宠.moc3  桌宠.physics3.json  桌宠.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: Action.cs  CubismHitTest.cs  Drag.cs  DragFullScreen.cs  Energy.cs  ExpressionTest.cs  Favor.cs  FeedAndTouch.cs  JsonTest.cs  LookTargetTest.cs  MainButton.cs  Mode.cs  Mood.cs  MotionPlayer.cs  MotionTest.cs  ParameterLaterUpdate.cs  SleepMode.cs  Timing.cs  WindowTransparent.cs  initModel.cs  loadModelPrefab.cs
Assets/UI Toolkit/: PanelSettings.asset
Assets/mine/: 1.exp3.asset  2.exp3.asset  4.exp3.asset  9.exp3.asset  ALT.exp3.asset  C.exp3.asset  D.exp3.asset  Scene1.motion3.anim  困困 Scene1.anim  桌宠.controller  桌宠.prefab  桌宠MaskTexture.asset  空格.exp3.asset  鼠标右.exp3.asset
ProjectSettings/: ProjectSettings.asset
Resources/桌宠/: 困困 Scene1.motion3.json
Resources/桌宠live2D/: 桌宠.model3.json
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: default-2021.dwlt
core_display/: CMakeLists.txt
core_display/app/: CMakeLists.txt  app_content.cpp  app_content.h  app_msg_handler.cpp  app_msg_handler.h  app_native_ev_filter.cpp  app_native_ev_filter.h  app_param.cpp  app_param.h  app_thread_helper.hpp  main.cpp
core_display/fsm/: CMakeLists.txt  fsm.cpp  fsm.h
core_display/hook/: CMakeLists.txt  hook.h
core_display/iona_gl/: CMakeLists.txt  data_ring.cpp  data_ring.h  data_ring_model.cpp  gl_handle.cpp  gl_handle.h  gl_object_base.h  gl_widget.cpp  gl_widget.h  l2d.cpp  l2d.h  l2d_allocator.cpp  l2d_config.h  l2d_model.cpp  l2d_model.h  l2d_pal.cpp  l2d_tex_manager.cpp  l2d_tex_manager.h  l2d_touch_manager.cpp  l2d_touch_manager.h  l2d_utils.h
core_display/move_ctrl/: CMakeLists.txt  move_widget.cpp  move_widget.h
core_display/quick_cmds/: CMakeLists.txt  quick_cmds_entry.cpp  quick_cmds_entry.h
core_display/resources/: resources.qrc
core_display/setInter/: CMakeLists.txt  setinter.cpp  setinter.h  setinter.ui
core_display/tray/: tray.cpp  tray.h
core_display/voice/: CMakeLists.txt  media_info.cpp  media_info.h  voice_label.cpp  voice_label.h  wav_handler.cpp  wav_handler.h
hook/: CMakeLists.txt  hook.cpp  hook.h
res/mine/: S.exp3.json  Scene1.motion3.motion3.json  桌宠.cdi3.json  桌宠.vtube.json
src/: CMakeLists copy.txt  CMakeLists.txt  LAppDefine.cpp  LAppView.cpp  LAppView.hpp  MouseActionManager.cpp  demo.cpp  demo.h  demo.ui  main.cpp  test.cpp
src/ds/: CMakeLists.txt  HealthSystem.cpp  HealthSystem.h  mood.hpp
src/gl/: CMakeLists.txt  LAppDefine.cpp  LAppDefine.hpp  TextureManager.cpp  TextureManager.h  TouchManager.cpp  TouchManager.h  gl_object_base.h  gl_widget.cpp  gl_widget.h  l2d.cpp  l2d.h  l2dPal.cpp  l2d_model.cpp  l2d_model.h  utils.h
src/model/: CMakeLists.txt  L2D_widget.cpp  L2D_widget.hpp  LAppDefine.cpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppView.cpp
src/qt/: CMakeLists.txt
src/setInter/: setinter.ui
src/tray/: CMakeLists.txt  tray.cpp  tray.h
src/views/: CMakeLists.txt  app_content.cpp  app_content.h  app_msg_handler.cpp  app_msg_handler.h  app_native_ev_filter.cpp  app_native_ev_filter.h  app_param.cpp  app_param.h
